Reskin context menus and add fixed positioning (#166)
* Reskin context menus and add fixed positioning

* Have context menus appear under cursor when pressing ellipses. Add grouping to active effect context menu.

--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -806,3 +806,52 @@
     }
   }
 }
+
+/* ---------------------------------- */
+/*  Context Menus                     */
+/* ---------------------------------- */
+
+#context-menu.dnd5e2 {
+  position: fixed;
+  z-index: var(--z-index-tooltip);
+  background: var(--dnd5e-color-card);
+  border-radius: 3px;
+  box-shadow: 0 3px 6px var(--dnd5e-shadow-45);
+  font-family: var(--dnd5e-font-roboto);
+  font-size: var(--font-size-13);
+  border: none;
+  color: var(--color-text-dark-primary);
+  width: max-content;
+  min-width: 145px;
+
+  .context-item {
+    padding: 0 .75rem;
+    cursor: pointer;
+
+    &:hover {
+      color: var(--color-text-dark-primary);
+      text-shadow: none;
+      background: var(--dnd5e-color-parchment);
+    }
+
+    i {
+      font-size: var(--font-size-11);
+      color: var(--color-text-dark-5);
+    }
+  }
+
+  .context-items > .context-item {
+    &:first-child { border-radius: 3px 3px 0 0; }
+    &:last-child { border-radius: 0 0 3px 3px; }
+  }
+
+  .context-group:first-child > ol > .context-item:first-child { border-radius: 3px 3px 0 0; }
+  .context-group:last-child > ol > .context-item:last-child { border-radius: 0 0 3px 3px; }
+
+  [data-group-id]:has(li)::before { border-block-start: 1px solid var(--color-border-light-1); }
+}
+
+/* Disable pointer events on the target while the context menu is open as a workaround for core tooltip logic not
+   accommodating fixed position context menus */
+
+.dnd5e2 .context { pointer-events: none; }
